# ripple-keypairs-rust-sgx

./: Cargo.toml  rust-toolchain.toml
sgx-tests/: Makefile  README.md
sgx-tests/app/: Cargo.toml  Makefile
sgx-tests/app/codegen/: Enclave_u.c  Enclave_u.h
sgx-tests/app/src/: main.rs
sgx-tests/enclave/: Cargo.toml  Enclave.edl  Makefile
sgx-tests/enclave/codegen/: Enclave_t.c  Enclave_t.h
sgx-tests/enclave/src/: lib.rs
src/: hexbytes.rs  lib.rs  utils.rs
src/algorithm/: ed25519.rs  mod.rs  secp256k1.rs
tests/: api.rs
