[package]
# name matches APP_U in Makefile
name = "sgx-test-app"
version = "0.1.0"
edition = "2018"
authors = ["Pi Delport <pjdelport@gmail.com>"]
build = "build.rs"

[dependencies]
sgx_types = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_urts = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
