[package]
# name matches ENCLAVE_CARGO_LIB in Makefile
name = "sgx-test-enclave"
version = "0.1.0"
edition = "2018"
authors = ["Pi Delport <pjdelport@gmail.com>"]

# libsecp256k1 requires feature resolver 2 to avoid unifying with std from its build dependencies.
# Docs: https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

[lib]
crate-type = ["staticlib"]
test = false
doctest = false
bench = false

[features]
default = []

[dependencies]
ripple-keypairs = { path = "../.." }

sgx_types = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", features = ["backtrace"] }
sgx_tunittest = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_libc = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_trts = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
